--- a/legal.html
+++ b/legal.html
@@ -2,8 +2,21 @@
 <html>
     <head>
         <title>Samuel Pilchard</title>
+        <link rel="stylesheet" href= "global.css">
     </head>
     <body>
+        <header>
+            <nav>
+                <ul><!-- Please can you turn these into links, and then copy this navbar to each of the pages? ? -->
+                    <li><a href="about.html">About</a> </li>
+                    <li><a href= "index.html"> Index</a></li>
+                    <li><a href="visit.html">Visit </a></li>
+                    <li><a href="Contact.html">Contact </a></li>
+                    <li><a href= "legal.html">Legal</a></li> 
+                </ul>
+            </nav>
+
+        </header>
 
         <h1>Privacy and legal</h1>
         
