--- a/Contact.html
+++ b/Contact.html
@@ -2,8 +2,22 @@
 <html>
     <head>
         <title>Contact</title>
+        <link rel="stylesheet" href= "global.css">
     </head>
     <body>
+        <header>
+            <nav>
+                <ul><!-- Please can you turn these into links, and then copy this navbar to each of the pages? ? -->
+                    <li><a href= "about.html">About</a></li>
+                    <li><a href= "index.html"> Index</a></li>
+                    <li><a href= "visit.html">Visit</a></li>
+                    <li><a href= "contact.html">Contact</a></li>
+                    <li><a href= "legal.html">Legal</a></li>
+                </ul>
+            </nav>
+
+        </header>
+
 
         <h1>Contact us</h1>
 
@@ -14,8 +28,8 @@
             https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a
         -->
         <ul>
-            <li>Call us: 07123125881281824 </li>
-            <li>Email us: higgeldypiggeldy@galleryofnonsense.com</li>
+            <li>Call us:<a href= "tel:07123125881281824">07123125881281824</a> </li>
+            <li>Email us:<a href= "mailto: higgeldypiggeldy@galleryofnonsense.com"> higgeldypiggeldy@galleryofnonsense.com</a></li>
         </ul>
     </body>
 </html>
