--- a/about.html
+++ b/about.html
@@ -2,8 +2,21 @@
 <html>
     <head>
         <title>Gallery of Strange things</title>
+        <link rel="stylesheet" href= "global.css">
     </head>
     <body>
+        <header>
+            <nav>
+                <ul><!-- Please can you turn these into links, and then copy this navbar to each of the pages? ? -->
+                    <li><a href= "about.html">About</a></li>
+                    <li><a href= "index.html"> Index </a></li>
+                    <li><a href= "visit.html">Visit</a></li>
+                    <li><a href= "contact.html">Contact</a></li>
+                    <li><a href= "legal.html">Legal</a> </li>
+                </ul>
+            </nav>
+
+        </header>
 
         <h1>Oh you're interested in us?</h1>
 
@@ -11,5 +24,6 @@
         <!--  
             To perfect this page, it would be great if you could add our photo - museum.jpg.
         -->
+        <img src= "media/img/museum.jpeg">
     </body>
 </html>
