--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
             to the css stylesheet in this directory. Can you add it in?
             After that why don't you copy and paste the link element to the other html files? Remember to place it inside the <head>
             And you may want to take a look inside the css stylesheet for a further problem to fix.-->
-        <link rel="stylesheet">
+        <link rel="stylesheet" href= "global.css">
     </head>
     <body>
 
         <header>
             <nav>
                 <ul><!-- Please can you turn these into links, and then copy this navbar to each of the pages? ? -->
-                    <li>About</li>
-                    <li>Visit</li>
-                    <li>Contact</li>
+                    <li><a href= "about.html">About</a></li>
+                    <li><a href= "index.html">Index</a></li>
+                    <li><a href= "visit.html">Visit</a></li>
+                    <li><a href= "contact.html">Contact</a></li>
+                    <li><a href= "legal.html"> Legal</a></li>
                 </ul>
             </nav>
 
@@ -26,10 +28,16 @@
 
         <p>We've not got much in our collection, but what we do have is very exciting!</p>
         <!-- Can you add an ordered list of links to the items in the collection? -->
+        <ol>
+            <li><a href= "about.html">About</a></li>
+            <li><a href= "visit.html">Visit</a></li>
+            <li><a href= "contact.html"> Contact</a></li>
+            <li><a href= "legal.html">Legal </a> </li>
+        </ol>
 
         <footer>
             <!-- This link is not working, can you fix it, and then copy it to the other html files (make sure to test that it works after you do that!) -->
-            <p>You probably don't want to read our <a href="/legal.html">terms and conditions?</a></p>
+            <p>You probably don't want to read our <a href="legal.html">terms and conditions?</a> </p>
 
         </footer>
 
