--- a/visit.html
+++ b/visit.html
@@ -2,9 +2,21 @@
 <html>
     <head>
         <title>Visit The Gallery of Strange things</title>
+        <link rel="stylesheet" href= "global.css">
     </head>
     <body>
+        <header>
+            <nav>
+                <ul><!-- Please can you turn these into links, and then copy this navbar to each of the pages? ? -->
+                    <li><a href= "about.html">About</a></li>
+                    <li><a href= "index.html">Index</a></li>
+                    <li><a href= "visit.html">Visit</a></li>
+                    <li><a href= "contact.html">Contact</a></li>
+                    <li><a href= "legal.html"> Legal</a></li>
+                </ul>
+            </nav>
 
+        </header>
         <h1>Visit us</h1>
 
         <p>The Museum of Nonsense is currently located at 1600 Pennsylvania Avenue NW, Washington, DC 20500, United States</p>
@@ -12,8 +24,9 @@
         <!-- Please could you embed a Google Maps map iframe, to help visitors find us? 
             Find your location, hit Share > Embed a map > set your size and > Copy HTML > paste it here.
         -->
-
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3105.1507678126527!2d-77.03876258515498!3d38.897667454534286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1602848539140!5m2!1sen!2suk" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         <!-- While you're here, can you embed a Street View iframe of inside our too? -->
+        <iframe src="https://www.google.com/maps/embed?pb=!4v1602848802933!6m8!1m7!1sWeDLCCmKY9nU_B7DwMscfQ!2m2!1d38.89762156899428!2d-77.03599232445642!3f239.5584578671331!4f-15.217786957634829!5f0.7820865974627469" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
     </body>
 </html>
